add timer component

--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,7 @@ body {
 /* <<< RATING COMPONENT >>> */
 
 /* <<< NOTES APP >>> */
-body {
+/* body {
   @apply bg-purple-900;
-}
+} */
 /* <<< NOTES APP >>> */
