--- a/src/pages/node-interface/node-interface.css
+++ b/src/pages/node-interface/node-interface.css
@@ -77,11 +77,11 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
 
 .hexagon-inner-2 {
   position: relative;
-  width: 120px;
-  height: 60px;
+  width: 160px;
+  height: 80px;
   background-color: #a0c9a5;
   margin: auto;
-  top: 10px;
+  top: 5px;
 }
 
 .hexagon-inner-2::before,
@@ -89,25 +89,25 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
   content: "";
   position: absolute;
   width: 0;
-  border-left: 60px solid transparent;
-  border-right: 60px solid transparent;
+  border-left: 80px solid transparent;
+  border-right: 80px solid transparent;
 }
 
 .hexagon-inner-2::before {
   bottom: 100%;
-  border-bottom: 30px solid #a0c9a5;
+  border-bottom: 40px solid #a0c9a5;
 }
 
 .hexagon-inner-2::after {
   z-index: 2;
   top: 100%;
-  border-top: 30px solid #a0c9a5;
+  border-top: 40px solid #a0c9a5;
 }
 
 .hexagon-inner-3 {
   position: relative;
-  width: 100px;
-  height: 50px;
+  width: 140px;
+  height: 70px;
   background-color: #5b6c71;
   margin: auto;
   top: 5px;
@@ -118,19 +118,48 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
   content: "";
   position: absolute;
   width: 0;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
+  border-left: 70px solid transparent;
+  border-right: 70px solid transparent;
 }
 
 .hexagon-inner-3::before {
   bottom: 100%;
-  border-bottom: 25px solid #5b6c71;
+  border-bottom: 35px solid #5b6c71;
 }
 
 .hexagon-inner-3::after {
   z-index: 3;
   top: 100%;
-  border-top: 25px solid #5b6c71;
+  border-top: 35px solid #5b6c71;
+}
+
+.hexagon-inner-4 {
+  position: relative;
+  width: 120px;
+  height: 60px;
+  background-color: #e0e0e0;
+  margin: auto;
+  top: 5px;
+}
+
+.hexagon-inner-4::before,
+.hexagon-inner-4::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 60px solid transparent;
+  border-right: 60px solid transparent;
+}
+
+.hexagon-inner-4::before {
+  bottom: 100%;
+  border-bottom: 30px solid #e0e0e0;
+}
+
+.hexagon-inner-4::after {
+  z-index: 4;
+  top: 100%;
+  border-top: 30px solid #e0e0e0;
 }
 
 .circle {
@@ -140,6 +169,6 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
   width: 20px;
   height: 20px;
   margin: auto;
-  top: 15px;
+  top: 25px;
   border-radius: 50%;
 }
