--- a/src/pages/node-interface/node-interface.css
+++ b/src/pages/node-interface/node-interface.css
@@ -34,12 +34,53 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
   min-height: 100vh;
 }
 
+.terminal {
+  background-color: rgba(0, 0, 0, 0.2);
+  border: 2px solid #6f9c6f;
+  border-radius: 5px;
+  height: 150px;
+  width: 250px;
+  margin: 10rem;
+}
+
+.terminal-header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 25px;
+  background-color: #b0b0b0;
+}
+
+.terminal-circle {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  margin: 0 5px;
+}
+
+.terminal-console {
+  color: #1a1a1a;
+  margin-left: 10px;
+}
+
+.terminal-main {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.terminal-output {
+  width: 150px;
+  height: 5px;
+  margin: 5px;
+  background-color: #6f9c6f;
+}
+
 .hexagon {
   position: relative;
   width: 200px;
   height: 100px;
   background-color: #6f9c6f;
-  margin: 10rem auto;
+  margin: 10rem auto 0;
 }
 
 .hexagon::before,
