--- a/src/pages/node-interface/node-interface.css
+++ b/src/pages/node-interface/node-interface.css
@@ -42,11 +42,12 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
 .terminal {
   top: 5rem;
   margin-left: 1rem;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.9);
   border: 2px solid #6f9c6f;
   border-radius: 5px;
   height: 150px;
   width: 250px;
+  z-index: 6;
 }
 
 .terminal-header {
@@ -279,28 +280,28 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
 
 .semicircle-top {
   position: absolute;
-  width: 120px;
-  height: 60px;
-  right: 65%;
-  bottom: 65%;
+  width: 16rem;
+  height: 8rem;
+  left: 0;
+  bottom: 75vh;
   border: 2px solid #6f9c6f;
   border-bottom: none;
-  border-top-left-radius: 120px;
-  border-top-right-radius: 120px;
+  border-top-left-radius: 16rem;
+  border-top-right-radius: 16rem;
   rotate: -90deg;
-  z-index: 6;
+  opacity: 50%;
 }
 
 .semicircle-bottom {
   position: absolute;
-  width: 120px;
-  height: 60px;
-  right: 20%;
-  bottom: 35%;
+  width: 16rem;
+  height: 8rem;
+  right: 0;
+  bottom: 28vh;
   border: 2px solid #6f9c6f;
   border-top: none;
-  border-bottom-left-radius: 120px;
-  border-bottom-right-radius: 120px;
+  border-bottom-left-radius: 16rem;
+  border-bottom-right-radius: 16rem;
   rotate: -90deg;
-  z-index: 6;
+  opacity: 50%;
 }
