--- a/src/pages/node-interface/node-interface.css
+++ b/src/pages/node-interface/node-interface.css
@@ -39,9 +39,19 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
   min-height: 100vh;
 }
 
+.diamond {
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid #a87e35;
+  opacity: 50%;
+  rotate: 45deg;
+}
+
 .terminal {
   top: 5rem;
-  margin-left: 1rem;
   background-color: rgba(0, 0, 0, 0.9);
   border: 2px solid #6f9c6f;
   border-radius: 5px;
@@ -303,5 +313,27 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
   border-bottom-left-radius: 16rem;
   border-bottom-right-radius: 16rem;
   rotate: -90deg;
+  opacity: 50%;
+}
+
+.circle-outer {
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid #a87e35;
+  border-radius: 50%;
+  opacity: 50%;
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle-inner {
+  width: 1rem;
+  height: 1rem;
+  border: 2px solid #a87e35;
+  border-radius: 50%;
   opacity: 50%;
 }
