--- a/src/pages/node-interface/node-interface.css
+++ b/src/pages/node-interface/node-interface.css
@@ -39,6 +39,27 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
   min-height: 100vh;
 }
 
+.circle-diamond {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid #a87e35;
+  border-radius: 50px;
+  opacity: 50%;
+  rotate: 45deg;
+}
+
+.inner-diamond {
+  width: 0.5rem;
+  height: 0.5rem;
+  margin: 0.5rem;
+  border: 2px solid #a87e35;
+  opacity: 50%;
+  transform: rotate(45);
+}
+
 .diamond {
   position: absolute;
   bottom: 1rem;
@@ -93,6 +114,35 @@ Highlights: #e3725b, #a87e35, #6f9c6f (Muted Green)
   width: 150px;
   height: 5px;
   margin: 5px;
+}
+
+.outer-hexagon {
+  position: absolute;
+  top: 1.5rem;
+  right: 1rem;
+  width: 2rem;
+  height: 1rem;
+  background-color: #a87e35;
+  opacity: 50%;
+  z-index: 6;
+}
+
+.outer-hexagon::before,
+.outer-hexagon::after {
+  content: "";
+  position: absolute;
+  border-left: 1rem solid transparent;
+  border-right: 1rem solid transparent;
+}
+
+.outer-hexagon::before {
+  bottom: 100%;
+  border-bottom: 0.5rem solid #a87e35;
+}
+
+.outer-hexagon::after {
+  top: 100%;
+  border-top: 0.5rem solid #a87e35;
 }
 
 .hexagon {
