--- a/src/components/QuizCard/quizCard.css
+++ b/src/components/QuizCard/quizCard.css
@@ -1,6 +1,7 @@
 .quizCard-container {
   border: 2px solid blue;
-  margin: 0.5rem;
+  margin: 0.5rem auto;
+  max-width: 90vw;
   padding: 0.5rem;
   width: 18rem;
 }
@@ -15,6 +16,11 @@
   cursor: pointer;
   margin: 0.25rem;
   padding: 0.25rem;
+}
+
+.quizCard-container button.selected {
+  background-color: rgba(0, 0, 0, 0.3);
+  font-weight: bold;
 }
 
 .quizCard-container p {
