--- a/src/components/QuizCard/quizCard.css
+++ b/src/components/QuizCard/quizCard.css
@@ -1,8 +1,9 @@
 .quizCard-container {
   border: 2px solid blue;
+  border-radius: 0.5rem;
   margin: 0.5rem auto;
   max-width: 90vw;
-  padding: 0.5rem;
+  padding: 1rem;
   width: 18rem;
 }
 
@@ -15,6 +16,7 @@
   border: 2px solid gray;
   cursor: pointer;
   margin: 0.25rem;
+  width: 100%;
   padding: 0.25rem;
 }
 
