--- a/src/pages/quiz/quiz.css
+++ b/src/pages/quiz/quiz.css
@@ -1,17 +1,29 @@
 .quizPage-container {
-  margin: auto;
+  margin: 2rem auto;
 }
 
-.quizPage-container section {
+.quizPage-quizSection {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row wrap;
   gap: 1rem;
-  text-align: center;
 }
 
 .quizPage-container button {
   border: 2px solid gray;
+  border-radius: 0.5rem;
   cursor: pointer;
-  margin: 0.25rem;
-  padding: 0.25rem;
+  margin: 0.25rem auto;
+  padding: 0.25rem 0.5rem;
+}
+
+.quizPage-btnSection {
+  align-items: center;
+  display: flex;
+  gap: 1rem;
+  flex-flow: column nowrap;
+  margin: 1rem;
+}
+
+.quizPage-btnSection p {
+  font-weight: bold;
 }
