--- a/src/components/QuizCard/quizCard.css
+++ b/src/components/QuizCard/quizCard.css
@@ -1,10 +1,11 @@
 .quizCard-container {
   border: 2px solid blue;
   border-radius: 0.5rem;
-  margin: 0.5rem auto;
-  max-width: 90vw;
+  box-sizing: border-box;
+  margin: 0;
+  max-width: 100%;
   padding: 1rem;
-  width: 18rem;
+  width: 100%;
 }
 
 .quizCard-container h2 {
