--- a/src/pages/quiz/quiz.css
+++ b/src/pages/quiz/quiz.css
@@ -18,7 +18,7 @@
   }
 }
 
-.quizPage-container button {
+.quizPage-btn {
   border: 2px solid gray;
   border-radius: 0.5rem;
   cursor: pointer;
@@ -34,6 +34,6 @@
   margin: 1rem;
 }
 
-.quizPage-btnSection p {
+.quizPage-p {
   font-weight: bold;
 }
