--- a/src/pages/quiz/quiz.css
+++ b/src/pages/quiz/quiz.css
@@ -26,6 +26,15 @@
   padding: 0.25rem 0.5rem;
 }
 
+.quizPage-btn:disabled {
+  background-color: rgba(0, 0, 0, 0.1);
+  font-weight: 500;
+}
+
+.quizPage-btn:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
 .quizPage-btnSection {
   align-items: center;
   display: flex;
